--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "./dist/fonts/glyphicons-halflings-regular.eot",
     "./dist/fonts/glyphicons-halflings-regular.svg",
     "./dist/fonts/glyphicons-halflings-regular.ttf",
-    "./dist/fonts/glyphicons-halflings-regular.woff"
+    "./dist/fonts/glyphicons-halflings-regular.woff",
+    "./dist/fonts/font-myriad-pro.css"
   ],
   "ignore": [
     "**/.*",
